# owlcheck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/owlcheck/: __init__.py  _diagnostics.py  settings.py
tests/: conftest.py  test_diagnostics.py  test_load.py
